# CG

./: .gitignore  CMakeLists.txt  README.md  box.xml  box_1.3d  build.sh  cone.xml  config.xml  cylinder_1.3d  sistemasolar.py  sistemasolar_py.xml  sphere.3d  sphere.xml  torus.xml  valgrind.sh
models/: cone.3d  cylinder.3d  gumbo.patch  out_gumbo.patch  patch_convert.py  sphere.3d  teapot.3d  torus.3d
report/: Report.tex  box_code.tex  cone_code.tex  plane_code.tex  sphere_code.tex  valgrind_engine.tex  valgrind_generator.tex
report_2/: Report.tex  example_xml.tex
report_3/: Report.tex  group.tex
report_4/: Report.bib  Report.tex  box.tex
scenes/: box.3d  box.xml  cone.3d  cone.xml  config.xml  cylinder.xml  directional_light.xml  gumbo.xml  house.xml  plane.3d  plane.xml  sistemasolar.xml  sistemasolar_1.xml  sistemasolar_face.xml  sistemasolar_py.xml  sistemasolar_py_1.xml  sistemasolar_py_face.xml  sistemasolar_still.xml  sphere.3d  sphere.xml  (+5 more)
src/: CMakeLists.txt  main.cpp  point.hpp
src/common/: CMakeLists.txt  point.cpp  point.hpp  util.cpp  util.hpp
src/engine/: CMakeLists.txt  camera.cpp  camera.hpp  group.cpp  group.hpp  light.cpp  light.hpp  main.cpp  model.cpp  model.hpp  parser.cpp  parser.hpp  point.cpp  render.cpp  render.hpp  rgb.hpp  transformations.cpp  transformations.hpp
src/generator/: CMakeLists.txt  box.cpp  box.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  generator.cpp  generator.hpp  main.cpp  parser.cpp  parser.h  patch.cpp  patch.h  patches.cpp  patches.hpp  plane.cpp  sphere.cpp  sphere.hpp  torus.cpp  torus.hpp
(+12 files in other folders)
